--- a/index.html
+++ b/index.html
@@ -14,58 +14,64 @@
 	</head>
 
 	<body>
-		<div class="center" id="main">
+		<div id="container">
+	
+			<div class="center" id="main">
 		
-			<div class="container" id="title_div">
-				<h1 class="lat center" id="title_h1">PigPixel <span class="bold">Prison</span></h1>
+				<div class="container" id="title_div">
+					<h1 class="lat center" id="title_h1">PigPixel <span class="bold">Prison</span></h1>
+				</div>
+				
+				<div id="sub_main">
+					<div class="container" id="intro_div">
+						<p class="mont center" id="intro_p">PigPixel <span class="bold">Prison</span> is a Minecraft: PE Prison server hosted by <a href="http://leet.cc" class="green_l">LEET</a>. Not only do we offer highly-developed and high-tech Prison, but we also have parkour, PvP, and minigames to offer to our players.</p>
+					</div>
+		
+					<a href="http://minecraftpocket-servers.com/server/48595/vote/" target="_blank"><button class="mont center" id="vote_btn">vote</button></a>
+				</div>
+				
 			</div>
 		
-			<div class="container" id="intro_div">
-				<p class="mont center" id="intro_p">PigPixel <span class="bold">Prison</span> is a Minecraft: PE Prison server hosted by <a href="http://leet.cc" class="green_l">LEET</a>. Not only do we offer highly-developed and high-tech Prison, but we also have parkour, PvP, and minigames to offer to our players.</p>
-			</div>
+			<div class="container lat" id="footer">
 		
-			<a href="http://minecraftpocket-servers.com/server/48595/vote/" target="_blank"><button class="mont center" id="vote_btn">vote</button></a>
+				<div class="container f_main" id="home_div">
+					<a href="http://ppmcpe.tk">
+						<div class="container f_div">
+							<h4 class="f_h4" id="home_h4">home</h4>
+						</div>
+					</a>
+				</div>
 			
-		</div>
+				<div class="container f_main" id="other">
+					<a href="http://ppmcpe.tk/rules.html">
+						<div class="container f_div f_div_other" id="rules">
+							<h4 class="f_h4" id="rules_h4">rules</h4>
+						</div>
+					</a>
+			
+					<a href="http://ppmcpe.tk/ranks.html">
+						<div class="container f_div f_div_other" id="ranks">
+							<h4 class="f_h4" id="ranks_h4">ranks</h4>
+						</div>
+					</a>
+			
+					<a href="http://ppmcpe.tk/staff.html">
+						<div class="container f_div f_div_other" id="staff">
+							<h4 class="f_h4" id="staff_h4">staff</h4>
+						</div>
+					</a>
+			
+					<a href="http://ppmcpe.tk/contact.html">
+						<div class="container f_div f_div_other" id="contact">
+							<h4 class="f_h4" id="contact_h4">contact</h4>
+						</div>
+					</a>
+				</div>
 		
-		<div class="container lat" id="footer">
-		
-			<div class="container f_main" id="home_div">
-				<a href="http://ppmcpe.tk">
-					<div class="container f_div">
-						<h4 class="f_h4" id="home_h4">home</h4>
-					</div>
-				</a>
-			</div>
+				<div class="container f_main" id="pbg_div">
+					<h3 class="f_h3" id="pbg_h3">powered by <a href="http://github.com">GitHub</a></h3>
+				</div>
 			
-			<div class="container f_main" id="other">
-				<a href="http://ppmcpe.tk/rules.html">
-					<div class="container f_div f_div_other" id="rules">
-						<h4 class="f_h4" id="rules_h4">rules</h4>
-					</div>
-				</a>
-			
-				<a href="http://ppmcpe.tk/ranks.html">
-					<div class="container f_div f_div_other" id="ranks">
-						<h4 class="f_h4" id="ranks_h4">ranks</h4>
-					</div>
-				</a>
-			
-				<a href="http://ppmcpe.tk/staff.html">
-					<div class="container f_div f_div_other" id="staff">
-						<h4 class="f_h4" id="staff_h4">staff</h4>
-					</div>
-				</a>
-			
-				<a href="http://ppmcpe.tk/contact.html">
-					<div class="container f_div f_div_other" id="contact">
-						<h4 class="f_h4" id="contact_h4">contact</h4>
-					</div>
-				</a>
-			</div>
-		
-			<div class="container f_main" id="pbg_div">
-				<h3 class="f_h3" id="pbg_h3">powered by <a href="http://github.com">GitHub</a></h3>
 			</div>
 			
 		</div>
