--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
 				</div>
 			
 				<div class="container f_main" id="other">
-					<a href="http://ppmcpe.tk/rules.html">
+					<a href="http://ppmcpe.tk/rules">
 						<div class="container f_div f_div_other" id="rules">
 							<h4 class="f_h4" id="rules_h4">rules</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/ranks.html">
+					<a href="http://ppmcpe.tk/ranks">
 						<div class="container f_div f_div_other" id="ranks">
 							<h4 class="f_h4" id="ranks_h4">ranks</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/staff.html">
+					<a href="http://ppmcpe.tk/staff">
 						<div class="container f_div f_div_other" id="staff">
 							<h4 class="f_h4" id="staff_h4">staff</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/contact.html">
+					<a href="http://ppmcpe.tk/contact">
 						<div class="container f_div f_div_other" id="contact">
 							<h4 class="f_h4" id="contact_h4">contact</h4>
 						</div>
