--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:900,700" />
 		
-		<![if !IE]>
-		<link rel="icon" href="http://yourwebsite/images/favicon.png" type="image/x-icon" />
-		<![endif]>
-		<link rel="shortcut icon" href="http://yourwebsite/images/favicon.ico" type="image/ico" />
+		<link type="image/ico" rel="icon" href="http://ppmcpe.tk/favicon.ico" />
 	
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="ppmcpe.js"></script>
