--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:900,700" />
 		
-		<link type="image/ico" rel="icon" href="http://ppmcpe.tk/favicon.ico" />
+		<link type="image/x-icon" rel="shortcut icon" href="http://ppmcpe.tk/favicon.ico" />
 	
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="ppmcpe.js"></script>
