--- a/rules/index.html
+++ b/rules/index.html
@@ -44,7 +44,7 @@
 						</div>
 					
 						<div class="r_div" id="r4_div">
-							<h4 class="r_h4" id="r4_h4">4. Do not <span class="w700">PvP</span> in unauthorized areas. Normally, all our mines, minigames, parkours, and all other areas that are not designated for Player v. Player gameplay should be area protected so that PvP is disabled. But, we're all humans and none of us are perfect, so if you find an area in a mine, or anywhere else where you know you shouldn't be able to PvP in, then please, don't PvP there, as it will ruin the victims' gaming experience of PigPixel.</h4>
+							<h4 class="r_h4" id="r4_h4">4. Do not <span class="w700">PvP</span> in unauthorized areas. Normally, all our mines, minigames, parkours, and all other areas that are not designated for Player v. Player gameplay should be area protected so that PvP is disabled. But, we're all humans and none of us are perfect, so if you find an area in a mine, or anywhere else where you know you shouldn't be able to PvP in, but where you can actually PvP in, then please, don't PvP there, as it will ruin the victims' gaming experience of PigPixel.</h4>
 						</div>
 					
 						<div class="r_div" id="r5_div">
