--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="container lat" id="footer">
 		
 				<div class="container f_main" id="home_div">
-					<a href="http://ppmcpe.tk">
+					<a href="http://pigpixel.tk">
 						<div class="container f_div">
 							<h4 class="f_h4" id="home_h4">home</h4>
 						</div>
@@ -45,25 +45,25 @@
 				</div>
 			
 				<div class="container f_main" id="other">
-					<a href="http://ppmcpe.tk/rules">
+					<a href="http://pigpixel.tk/rules">
 						<div class="container f_div f_div_other" id="rules">
 							<h4 class="f_h4" id="rules_h4">rules</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/ranks">
+					<a href="http://pigpixel.tk/ranks">
 						<div class="container f_div f_div_other" id="ranks">
 							<h4 class="f_h4" id="ranks_h4">ranks</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/staff">
+					<a href="http://pigpixel.tk/staff">
 						<div class="container f_div f_div_other" id="staff">
 							<h4 class="f_h4" id="staff_h4">staff</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/contact">
+					<a href="http://pigpixel.tk/contact">
 						<div class="container f_div f_div_other" id="contact">
 							<h4 class="f_h4" id="contact_h4">contact</h4>
 						</div>
