--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 		
 				<div class="container f_main" id="pbg_div">
-					<h3 class="f_h3" id="pbg_h3">powered by <a href="http://github.com">GitHub</a></h3>
+					<h3 class="f_h3" id="pbg_h3">powered by <a href="https://github.com">GitHub</a></h3>
 				</div>
 			
 			</div>
