--- a/rules/index.html
+++ b/rules/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:900,700" />
 		
-		<link type="image/x-icon" rel="shortcut icon" href="http://ppmcpe.tk/favicon.png" />
+		<link type="image/x-icon" rel="shortcut icon" href="http://pigpixel.tk/favicon.png" />
 	
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="ppmcpe-rules.js"></script>
@@ -58,10 +58,10 @@
 				</div>
 			</div>
 			
-			<div class="lat" id="footer">
+			<div class="container lat" id="footer">
 		
 				<div class="container f_main" id="home_div">
-					<a href="http://ppmcpe.tk">
+					<a href="http://pigpixel.tk">
 						<div class="container f_div">
 							<h4 class="f_h4" id="home_h4">home</h4>
 						</div>
@@ -69,25 +69,25 @@
 				</div>
 			
 				<div class="container f_main" id="other">
-					<a href="http://ppmcpe.tk/rules">
+					<a href="http://pigpixel.tk/rules">
 						<div class="container f_div f_div_other" id="rules">
 							<h4 class="f_h4" id="rules_h4">rules</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/ranks">
+					<a href="http://pigpixel.tk/ranks">
 						<div class="container f_div f_div_other" id="ranks">
 							<h4 class="f_h4" id="ranks_h4">ranks</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/staff">
+					<a href="http://pigpixel.tk/staff">
 						<div class="container f_div f_div_other" id="staff">
 							<h4 class="f_h4" id="staff_h4">staff</h4>
 						</div>
 					</a>
 			
-					<a href="http://ppmcpe.tk/contact">
+					<a href="http://pigpixel.tk/contact">
 						<div class="container f_div f_div_other" id="contact">
 							<h4 class="f_h4" id="contact_h4">contact</h4>
 						</div>
@@ -99,7 +99,7 @@
 				</div>
 			
 			</div>
-		
-		</div>
+			
+		</div>	
 	</body>
 </html>
