--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
       <div class="center" id="main">
         
         <div class="container" id="canvas_div">
-          <canvas id="myCanvas" height="6em"></canvas>
+          <canvas id="myCanvas" height="200"></canvas>
         </div>
         
         <div class="container" id="that_error_div">
