--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="ppmcpe.js"></script>
+		
+		<meta name="description" content="PigPixel MCPE's official website -- c63254.leet.cc:63254" />
+		<meta name="keywords" content="MCPE,LEET,Minecraft,Prison,Server" />
+		<meta name="author" content="ZePigThouv MCPE" />
 	
 	</head>
 
