--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
     
     <script type="text/javascript" src="404.js"></script>
+    <script type="text/javascript" src="404mobileRedirect.js"></script>
   </head>
   
   <body>
