--- a/404/index.html
+++ b/404/index.html
@@ -10,7 +10,7 @@
 		<link type="image/x-icon" rel="shortcut icon" href="http://pigpixel.tk/favicon.png" />
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="ppmcpe.tk/404.js"></script>
+    <script type="text/javascript" src="http://pigpixel.tk/404.js"></script>
   </head>
   
   <body>
